--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,3 +6,32 @@
 */
 /* Common styles */
 @import url('./reset.css');
+.container {
+  padding: 30px;
+}
+.timer {
+          display: flex;
+          gap: 10px;
+          margin-top: 20px;
+        }
+    
+        .field {
+          text-align: center;
+        }
+    
+        .value {
+          font-size: 2em;
+          display: block;
+        }
+    
+        .label {
+          font-size: 1em;
+          color: #777;
+        }
+    
+        button[data-start] {
+          margin-top: 10px;
+          padding: 10px 20px;
+          font-size: 1.2em;
+        }
+  
