--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@
   |============================
 */
 /* Common styles */
-@import url('./reset.css');
+/* @import url('./reset.css'); */
 .container {
   padding: 30px;
 }
@@ -35,3 +35,31 @@
           font-size: 1.2em;
         }
   
+
+        .form {
+        margin: 20px;
+        font-family: Arial, sans-serif;
+        }
+            
+        label,
+        legend {
+        display: block;
+        margin-bottom: 10px;
+        }
+            
+        input[type='number'] {
+        padding: 5px;
+        margin-bottom: 10px;
+        }
+            
+        fieldset {
+        margin-bottom: 20px;
+        }
+            
+        button {
+        padding: 10px 20px;
+        font-size: 1em;
+        cursor: pointer;
+        }
+            
+              
